[feat] Sightings are listed on the homepage in a table, changes have to be done to make the information pleasant to see

--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -1,4 +1,27 @@
+body {
+    font-family: 'Nunito',sans-serif;
+}
+
 .container-fluid {
     padding-left: 0px;
     padding-right: 0px;
+}
+
+nav {
+    font-family: 'Mukta',sans-serif;
+    font-size: 18px;
+    background: white;
+}
+
+nav .active {
+    text-decoration: underline;
+    color: #0B9444;
+}
+
+#brandLogo {
+    margin: 0px auto 0px auto;
+}
+
+.carousel-item img{
+  height: 50%:
 }
