--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -2,7 +2,7 @@
     <!DOCTYPE html>
     <html>
     <head>
-        <title>{{#block "title"}}Wildlife Tracker{{/block}}</title>
+        <title>{{#block "title"}}Sacred Jungle{{/block}}</title>
         <link href="https://fonts.googleapis.com/css?family=Mukta|Nunito|Poppins:500&display=swap" rel="stylesheet">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
         <link rel='stylesheet' href='/app.css'>
@@ -36,7 +36,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     </body>
     </html>
 {{/block}}
