--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -25,6 +25,9 @@
         </div>
     </nav>
 
+    {{#block "preContent"}}
+    {{/block}}
+
     <div class="container">
         {{#block "content"}}
         {{/block}}
