[feat] Users can now view particular locations where sightings have been reported and clicking on the name will view the all animals seen there

--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -30,3 +30,8 @@ nav .active {
     background-position-y: 60%;
     color: white;
 }
+
+/* ----------- sighting locations --------------*/
+.list-group-item {
+    color: black;
+}
