--- a/src/main/resources/templates/sighting-form.hbs
+++ b/src/main/resources/templates/sighting-form.hbs
@@ -1,7 +1,15 @@
 {{#partial "navlinks"}}
     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">View Animals</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Sighting Locations</a></li>
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            View Animals
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Endangered</a>
+            <a class="dropdown-item" href="#">Not Endangered</a>
+        </div>
+    </li>
+    <li class="nav-item"><a class="nav-link" href="/sighting/all">Sighting Locations</a></li>
     <li class="nav-item active"><a class="nav-link" href="/sighting/new">New Sighting</a></li>
 {{/partial}}
 
