[chore] Inserted datalist to animal form input that will now suggest animals that have been previously inserted/sighted

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -40,7 +40,7 @@
             </tbody>
         </table>
     {{else}}
-        <p class="text-center">No animals sighted yet. Report a sighting to have it appear here</p>
+        <h5 class="text-center">No animals sighted yet. Report a sighting to have it appear here</h5>
     {{/if}}
 {{/partial}}
 
