--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -9,7 +9,8 @@
             <a class="dropdown-item" href="#">Not Endangered</a>
         </div>
     </li>
-    <li class="nav-item"><a class="nav-link" href="/sighting/all">Sighting Locations</a></li>
+    <li class="nav-item"><a class="nav-link" href="/rangers">Our Rangers</a></li>
+    <li class="nav-item"><a class="nav-link" href="/sightings">Sighting Locations</a></li>
     <li class="nav-item"><a class="nav-link" href="/sighting/new">New Sighting</a></li>
 {{/partial}}
 
@@ -34,7 +35,7 @@
                     <td>{{animalName}}</td>
                     <td>{{location}}</td>
                     <td>{{readableTimestamp}}</td>
-                    <td>{{rangerName}}</td>
+                    <td><a href="/rangers/{{rangerid}}/details">{{rangerName}}</a></td>
                 </tr>
             {{/each}}
             </tbody>
