--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -12,7 +12,7 @@
 <!--begin main template-->
 <div class="container-fluid">
     <nav class="navbar static-top navbar-expand-lg navbar-light bg-light">
-        <img src="/images/logo_nav.png" class="navbar-brand" href="/" alt="brand logo" id="brandLogo">
+        <a href="/"><img src="/images/logo_nav.png" class="navbar-brand" alt="brand logo" id="brandLogo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,18 +28,16 @@
     {{#block "preContent"}}
     {{/block}}
 
-    <div class="container">
+    <div class="container" id="contentContainer">
         {{#block "content"}}
         {{/block}}
     </div>
-
 </div>
 <!--end main template-->
 {{#block "footer"}}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="/script.js"></script>
     </body>
     </html>
 {{/block}}
