--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -5,8 +5,8 @@
             View Animals
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Endangered</a>
-            <a class="dropdown-item" href="#">Not Endangered</a>
+            <a class="dropdown-item" href="/animals/endangered">Endangered</a>
+            <a class="dropdown-item" href="/animals/not-endangered">Not Endangered</a>
         </div>
     </li>
     <li class="nav-item"><a class="nav-link" href="/rangers">Our Rangers</a></li>
@@ -17,7 +17,7 @@
 {{#partial "preContent"}}
     <div id="success-jumbotron" class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Success :)</h1>
+            <h1 class="display-3">Success :)</h1>
             <p class="lead">You may proceed to any page by you want</p>
         </div>
     </div>
