--- a/src/main/resources/templates/all-rangers.hbs
+++ b/src/main/resources/templates/all-rangers.hbs
@@ -14,10 +14,16 @@
     <li class="nav-item"><a class="nav-link" href="/sighting/new">New Sighting</a></li>
 {{/partial}}
 
+{{#partial "preContent"}}
+    <div class="jumbotron jumbotrion-fluid ranger-jumbotron">
+        <div class="container">
+            <h1 class="display-3">Sacred Jungle!</h1>
+            <p class="lead">The animal conservancy</p>
+        </div>
+    </div>
+{{/partial}}
+
 {{#partial "content"}}
-    <h3 class="text-center">Sacred Jungle!</h3>
-    <h6 class="text-center">The animal conservancy</h6>
-    <hr>
     {{#if rangers}}
         <h2 class="text-center">Our Rangers</h2>
         <ul class="list-group">
