--- a/src/main/resources/templates/ranger-details.hbs
+++ b/src/main/resources/templates/ranger-details.hbs
@@ -5,8 +5,8 @@
             View Animals
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Endangered</a>
-            <a class="dropdown-item" href="#">Not Endangered</a>
+            <a class="dropdown-item" href="/animals/endangered">Endangered</a>
+            <a class="dropdown-item" href="/animals/not-endangered">Not Endangered</a>
         </div>
     </li>
     <li class="nav-item active"><a class="nav-link" href="/rangers">Our Rangers</a></li>
@@ -14,10 +14,16 @@
     <li class="nav-item"><a class="nav-link" href="/sighting/new">New Sighting</a></li>
 {{/partial}}
 
+{{#partial "preContent"}}
+    <div class="jumbotron jumbotrion-fluid ranger-jumbotron">
+        <div class="container">
+            <h1 class="display-3">Sacred Jungle!</h1>
+            <p class="lead">The animal conservancy</p>
+        </div>
+    </div>
+{{/partial}}
+
 {{#partial "content"}}
-    <h3 class="text-center">Sacred Jungle!</h3>
-    <h6 class="text-center">The animal conservancy</h6>
-    <hr>
     <h4>Ranger {{ranger.name}}</h4>
     <p>Below are the contributions of our very able ranger</p>
     <table class="table text-center">
