--- a/src/main/resources/templates/sighting-form.hbs
+++ b/src/main/resources/templates/sighting-form.hbs
@@ -47,11 +47,9 @@
         <div class="form-group">
             <label for="animalAge">Animal Age</label>
             <select name="animalAge" id="animalAge" class="form-control" required>
-                <option value="New Born">New Born</option>
-                <option value="Infant">Infant</option>
-                <option value="Young">Young</option>
-                <option value="Mature Adult">Mature Adult</option>
-                <option value="Old">Old</option>
+                {{#each ages}}
+                    <option value={{this}}>{{this}}</option>
+                {{/each}}
             </select>
         </div>
         <div class="form-group">
