[refac] DRY-ed out animal objects

--- a/src/main/resources/templates/sighting-form.hbs
+++ b/src/main/resources/templates/sighting-form.hbs
@@ -84,7 +84,7 @@
             {{/if}}
         </div>
         <div class="form-group">
-            <label for="animalType">Animal Health</label>
+            <label for="animalType">Animal Status</label>
             <select name="animalType" id="animalType" class="form-control" required>
                 <option value="Endangered">Endangered</option>
                 <option value="Not Endangered">Not Endangered</option>
